--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next": "12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
     "eslint": "8.17.0",
