--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.2",
     "@next/mdx": "^12.1.6",
+    "@react-pdf-viewer/core": "^3.7.0",
     "framer-motion": "^6.3.11",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
+    "pdfjs-dist": "^2.15.349",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.4.0",
-    "react-markdown": "^8.0.3"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
