--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@react-pdf-viewer/core": "^3.7.0",
     "framer-motion": "^6.3.11",
     "gray-matter": "^4.0.3",
-    "next": "12.1.6",
+    "next": "^13.4.12",
     "pdfjs-dist": "^2.15.349",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@next/swc-darwin-x64": "^13.4.12",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "^13.4.12"
   }
 }
