--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/react": "^2.1.2",
     "@next/mdx": "^12.1.6",
     "@react-pdf-viewer/core": "^3.7.0",
+    "@vercel/analytics": "^1.0.1",
     "framer-motion": "^6.3.11",
     "gray-matter": "^4.0.3",
     "next": "^13.4.12",
